--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="/favicon-DzcIbt36.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta description="Hope you like it!" />
-    <title>A very little website by aloo :)</title>
+    <title>A very little website by aloo for Kittu sharma :)</title>
     <script type="module" crossorigin src="/index-M1YsxULy.js"></script>
     <link rel="stylesheet" crossorigin href="/index-HGCvUkwi.css">
   </head>
